cmake_minimum_required(VERSION 3.15)
project(examples_06)

include("../Common.cmake")

add_executable(reverse_print reverse_print.cpp)
add_executable(int_matrix int_matrix.cpp)
add_executable(simple_vector simple_vector.cpp)
add_executable(sll sll.cpp)
add_executable(dll dll.cpp)
add_executable(bst bst.cpp)
	  