cmake_minimum_required(VERSION 3.15)
project(examples_07)

include("../Common.cmake")

add_executable(abs_diff abs_diff.cpp)
add_executable(get_min_max_sum get_min_max_sum.cpp)
add_executable(contains contains.cpp)
add_executable(sort1 sort1.cpp)
add_executable(sort2 sort2.cpp)
add_executable(point2d_2 point2d_2.cpp)
add_executable(pair pair.cpp)
add_executable(simple_vector_template simple_vector_template.cpp)

	